# napalm-slx-os

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
napalm_slx_os/: __init__.py  slx_os.py
napalm_slx_os/utils/textfsm_templates/: show_arp.tpl  show_inventory_chassis.tpl  show_ip_bgp_neighbors.tpl  show_ip_bgp_summary.tpl  show_ipv6_bgp_neighbors.tpl  show_ipv6_bgp_summary.tpl  show_version.tpl  show_vrf.tpl
test/unit/: TestDriver.py  TestSLXOSDriver.py  Testslx_osDriver.py  conftest.py  test_getters.py
test/unit/mocked_data/test_get_bgp_neighbors/single_ebgp/: expected_result.json  show_ipv6_bgp_summary.txt
test/unit/mocked_data/test_get_bgp_neighbors/single_ebgp_v6/: expected_result.json  show_ip_bgp_neighbors.txt  show_ip_bgp_summary.txt  show_ipv6_bgp_neighbors.txt  show_ipv6_bgp_summary.txt
test/unit/mocked_data/test_get_bgp_neighbors_detail/single_ebgp/: expected_result.json  show_ip_bgp_neighbors.txt  show_ip_bgp_summary.txt  show_ipv6_bgp_neighbors.txt
test/unit/mocked_data/test_get_facts/normal/: expected_result.json  show_inventory_chassis.txt  show_running_config_switch_attributes_host_name.txt  show_version.txt
